infra/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: infra-ingress
  namespace: infra
spec:
  # entryPoints:
  #   - websecure
  routes:
    - kind: Rule
      match: Host(`reg.toxics.space`)
      priority: 1
      middlewares:
      - name: redirect-to-https
      services:
      - name: container-redistry-svc
        port: 5000
    - kind: Rule
      match: Host(`grafana.toxics.space`)
      priority: 1
      middlewares:
      - name: redirect-to-https
      services:
      - name: grafana-svc
        port: 8080
  tls:
    certResolver: le
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: infra
spec:
  redirectScheme:
    scheme: https
    permanent: true
